changed some of the footer cards

--- a/breweries-near-you.html
+++ b/breweries-near-you.html
@@ -28,8 +28,21 @@
   </head>
 
   <body>
-    <div id="panel"></div>
+  <div class="container">
+      <div class="row">
+        <div class="col">
     <div id="breweries-map"></div>
+         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div id="panel"></div>
+        </div>
+      </div>
+    </div>
+
     <script
       async
       defer
