--- a/liverpool.html
+++ b/liverpool.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <!------------------------Navbar----------------------------->
-
+    <div id="Liverpool"></div>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
         class="navbar-toggler ml-auto"
@@ -86,9 +86,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#newsletter">Newsletter</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#join">Join</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -96,7 +93,7 @@
     <div class="container directions-container">
       <div class="row">
         <div class="col">
-          <h2 class="manchester-heading">Manchester</h2>
+          <h2 class="manchester-heading">Liverpool</h2>
           <p>
             Using the brewery locater panel choose from the list of breweries
             which you would like to visit. Choose brewery from which you would
@@ -323,11 +320,7 @@
               <br />
               <input type="submit" id="submit" />
             </div>
-
             <div id="directions-panel"></div>
-          </div>
-          <div class="overlay-image">
-            <div id="beer-pic"></div>
           </div>
         </div>
       </div>
