--- a/london.html
+++ b/london.html
@@ -87,9 +87,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#newsletter">Newsletter</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#join">Join</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -97,7 +94,7 @@
     <div class="container directions-container">
       <div class="row">
         <div class="col">
-          <h2 class="manchester-heading">Manchester</h2>
+          <h2 class="manchester-heading">London</h2>
           <p>
             Using the brewery locater panel choose from the list of breweries
             which you would like to visit. Choose brewery from which you would
@@ -318,9 +315,6 @@
             </div>
 
             <div id="directions-panel"></div>
-          </div>
-          <div class="overlay-image">
-            <div id="beer-pic"></div>
           </div>
         </div>
       </div>
