--- a/manchester.html
+++ b/manchester.html
@@ -76,19 +76,16 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about-man">About</a>
+            <a class="nav-link" href="#about-man">Breweries near you</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nearyou">Breweries near you</a>
+            <a class="nav-link" href="liverpool.html">Liverpool</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#cities">Cities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#newsletter">Newsletter</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#join">Join</a>
           </li>
         </ul>
       </div>
@@ -259,11 +256,7 @@ M1 2ND "
               <br />
               <input type="submit" id="submit" />
             </div>
-
             <div id="directions-panel"></div>
-          </div>
-          <div class="overlay-image">
-            <div id="beer-pic"></div>
           </div>
         </div>
       </div>
