changed colour schemes on city pages

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
          
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
@@ -100,6 +100,7 @@
         </ul>
       </div>
     </nav>
+
     <!------------------------Landing page image----------------------------->
     <div class="container-fluid landing-container">
       <div id="beertap-pic"></div>
@@ -107,14 +108,15 @@
 
     <!------------------------About heading----------------------------->
 
-    <h1 class="about-heading" id="about about-man">
+    <h1 class="about-heading" id="about">
 
       <!------------------------About icon----------------------------->
-      <img
+
+     <a href="index.html"> <img
         src="assets/images/Bar-Hop-UK.png"
         class="logo about-logo"
         alt="Bar Hop UK"
-      />About
+      /></a>About
     </h1>
 
     <!------------------------About copy----------------------------->
@@ -329,17 +331,6 @@
       </div>
     </div>
 
-    <div class="container" id="newsletter">
-      <div class="row">
-        <div class="col d-flex justify-content-cente">
-          <p>
-            Sign up to our monthly newsletter so we can keep you in the know
-            about everything that is beer. 
-          </p>
-        </div>
-      </div>
-    </div>
-
     <!------------------------Join up cards----------------------------->
 
   <h2 class="cities-heading jumbotron jumbotron-premium" id="premium">
@@ -397,7 +388,7 @@
           </p>
         </div>
       </div>
-      <div class="card bg-primary text-white text-center p-3">
+      <div class="card text-center p-3">
         <blockquote class="blockquote mb-0" id="join">
           
         <a href="">  <img
@@ -441,7 +432,7 @@
             alt="People brewing beer"
           />
           <p class="card-text">
-            Learn to home brew with our online videos and discounted clsses!.
+            Learn to home brew
           </p>
           <p class="card-text">
           </p>
