--- a/breweries-near-you.html
+++ b/breweries-near-you.html
@@ -28,25 +28,65 @@
   </head>
 
   <body>
-  <div class="container">
-      <div class="row">
-        <div class="col">
-    <div id="breweries-map"></div>
-         </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <div id="panel"></div>
-        </div>
-      </div>
-    </div>
 
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <button
+        class="navbar-toggler ml-auto"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <a href="index.html">
+          <div class="logo">
+            <div id="BarHop-logo">
+              <img
+                src="assets/images/Bar Hop UK (1).png"
+                class="logo bar-hop-logo"
+                alt="Bar-Hop-UK"
+              />
+            </div></div
+        ></a>
+
+        <ul class="navbar-nav ml-auto nav-list">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about-man">Breweries near you</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="liverpool.html">Liverpool</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#cities">Cities</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#newsletter">Newsletter</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  <div id="panel"></div>
+    <div id="breweries-map"></div>
+    
     <script
+      src="https://code.jquery.com/jquery-3.5.0.js"
+      integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeV7V21aKYQlUlIWApAuOwCGMR92fIXQM&libraries=places&callback=initAutocomplete"
     ></script>
   </body>
 </html>
