--- a/manchester.html
+++ b/manchester.html
@@ -37,7 +37,7 @@
     ></script>
 
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/manchester.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <title>Document</title>
   </head>
@@ -71,7 +71,7 @@
 
         <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
