testing read me push

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <div class="container-fluid landing-container">
       <div id="beertap-pic"></div>
     </div>
+     <div id="logo-pic"></div>
 
     <!------------------------About heading----------------------------->
 
