took landong pics out of mobile devices

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="card card-london" style="width: 18rem;">
             <a href="london.html"
               ><img
-                src="assets/images/London_Tower_Bridge_City.webp"
+                src="assets/images/london-2.jpg"
                 class="card-img-top"
                 alt="Tower bridge in London"
                 height="214px;"
@@ -366,7 +366,7 @@
       </div>
       <div class="card p-3">
          <img
-          src="assets/images/Edinburgh.webp"
+          src="assets/images/Edinburg2.jpeg"
           class="card-img-top"
           alt="Edinburgh city"
         />
