added more content to Read Me file

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="logo">
             <div id="BarHop-logo">
               <img
-                src="assets/images/Bar Hop UK (1).png"
+                src="assets/images/Bar Hop UK logo.png"
                 class="logo bar-hop-logo"
                 alt="Bar-Hop-UK"
               />
@@ -393,7 +393,7 @@
         <blockquote class="blockquote mb-0" id="join">
           
         <a href="">  <img
-                src="assets/images/Bar Hop UK (1).png"
+                src="assets/images/Bar Hop UK logo.png"
                 class="logo bar-hop-footer"
                 alt="Bar-Hop-UK"
               /></a>
