--- a/london.html
+++ b/london.html
@@ -62,7 +62,7 @@
           <div class="logo">
             <div id="BarHop-logo">
               <img
-                src="assets/images/Bar Hop UK (1).png"
+                src="assets/images/Bar Hop UK logo.png"
                 class="logo bar-hop-logo"
                 alt="Bar-Hop-UK"
               />
