--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       </div>
       <div class="card text-center">
         <div class="card-body meet-new-card">
-          <h5 class="card-title">Meet new People</h5>
+          <h5 class="card-title">Become a scicerone</h5>
           <p class="card-text">
             This card has a regular title and short paragraphy of text below it.
           </p>
