--- a/liverpool.html
+++ b/liverpool.html
@@ -37,7 +37,7 @@
     ></script>
 
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/manchester.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <title>Document</title>
   </head>
