--- a/liverpool.html
+++ b/liverpool.html
@@ -61,7 +61,7 @@
           <div class="logo">
             <div id="BarHop-logo">
               <img
-                src="assets/images/Bar Hop UK (1).png"
+                src="assets/images/Bar Hop UK logo.png"
                 class="logo bar-hop-logo"
                 alt="Bar-Hop-UK"
               />
