some maintanence, changed the i pad view on teh cities map page

--- a/breweries-near-you.html
+++ b/breweries-near-you.html
@@ -45,8 +45,8 @@
         <a href="index.html">
           <div class="logo">
             <div id="BarHop-logo">
-              <img
-                src="assets/images/Bar Hop UK (1).png"
+             <img
+                src="assets/images/Bar Hop UK logo.png"
                 class="logo bar-hop-logo"
                 alt="Bar-Hop-UK"
               />
