--- a/liverpool.html
+++ b/liverpool.html
@@ -107,7 +107,7 @@
     <div class="container-fluid manchester-container">
       <div class="row">
         <div class="col">
-          <div id="mapManchester"></div>
+          <div id="map"></div>
           <div id="right-panel">
             <div>
               <b>Starting-Brewery:</b>
