--- a/manchester.html
+++ b/manchester.html
@@ -94,7 +94,7 @@
     <div class="container directions-container">
       <div class="row">
         <div class="col">
-          <h2 class="manchester-heading">Manchester</h2>
+          <h2 class="city-map-heading">Manchester</h2>
           <p>
             Using the brewery locater panel choose from the list of breweries
             which you would like to visit. Choose brewery from which you would
@@ -108,7 +108,7 @@
     <div class="container-fluid manchester-container">
       <div class="row">
         <div class="col">
-          <div id="mapManchester"></div>
+          <div id="map"></div>
 
           <div id="right-panel">
             <div>
