--- a/london.html
+++ b/london.html
@@ -94,8 +94,8 @@
     <div class="container directions-container">
       <div class="row">
         <div class="col">
-          <h2 class="manchester-heading">London</h2>
-          <p>
+          <h2 class="city-map-heading">London</h2>
+          <p class="brewery-locator" >  
             Using the brewery locater panel choose from the list of breweries
             which you would like to visit. Choose brewery from which you would
             like to start from a brewery yoy would like to finsh your journey on
@@ -108,7 +108,7 @@
     <div class="container-fluid manchester-container">
       <div class="row">
         <div class="col">
-          <div id="mapManchester"></div>
+          <div id="map"></div>
 
           <div id="right-panel">
             <div>
