updated read me file

--- a/liverpool.html
+++ b/liverpool.html
@@ -93,7 +93,7 @@
     <div class="container directions-container">
       <div class="row">
         <div class="col">
-          <h2 class="manchester-heading">Liverpool</h2>
+          <h2 class="city-map-heading">Liverpool</h2>
           <p>
             Using the brewery locater panel choose from the list of breweries
             which you would like to visit. Choose brewery from which you would
