--- a/breweries-near-you.html
+++ b/breweries-near-you.html
@@ -45,7 +45,7 @@
         <a href="index.html">
           <div class="logo">
             <div id="BarHop-logo">
-             <img
+              <img
                 src="assets/images/Bar Hop UK logo.png"
                 class="logo bar-hop-logo"
                 alt="Bar-Hop-UK"
@@ -55,15 +55,15 @@
 
         <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"
+            <a class="nav-link" href="#"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about-man">Breweries near you</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="liverpool.html">Liverpool</a>
+            <a class="nav-link" href="#nearyou">Breweries near you</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#cities">Cities</a>
