--- a/liverpool.html
+++ b/liverpool.html
@@ -39,11 +39,12 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/script.js"></script>
 
-    <title>Document</title>
+    <title>Bar Hop UK</title>
   </head>
   <body>
+
     <!------------------------Navbar----------------------------->
-    <div id="Liverpool"></div>
+
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
         class="navbar-toggler ml-auto"
@@ -70,21 +71,24 @@
 
         <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
+            <a class="nav-link" href="index.html"
+              >Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="index.html#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nearyou">Breweries near you</a>
+            <a class="nav-link" href="index.html#nearyou">Breweries near you</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#cities">Cities</a>
+            <a class="nav-link" href="index.html#cities">Cities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#newsletter">Newsletter</a>
+            <a class="nav-link" href="index.html#newsletter">Newsletter</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#about">About</a>
           </li>
         </ul>
       </div>
