--- a/london.html
+++ b/london.html
@@ -39,13 +39,13 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/script.js"></script>
 
-    <title>Document</title>
+    <title>Bar Hop UK</title>
   </head>
   <body>
    
   <!------------------------Navbar----------------------------->
 
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+   <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
         class="navbar-toggler ml-auto"
         type="button"
@@ -71,21 +71,21 @@
 
         <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="index.html#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nearyou">Breweries near you</a>
+            <a class="nav-link" href="index.html#nearyou">Breweries near you</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#cities">Cities</a>
+            <a class="nav-link" href="index.html#cities">Cities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#newsletter">Newsletter</a>
+            <a class="nav-link" href="index.html#newsletter">Newsletter</a>
           </li>
         </ul>
       </div>
