--- a/manchester.html
+++ b/manchester.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/script.js"></script>
 
-    <title>Document</title>
+    <title>Bar Hop UK</title>
   </head>
   <body>
    
@@ -76,16 +76,16 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about-man">Breweries near you</a>
+            <a class="nav-link" href="index.html#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="liverpool.html">Liverpool</a>
+            <a class="nav-link" href="index.html#nearyou">Breweries near you</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#cities">Cities</a>
+            <a class="nav-link" href="index.html#cities">Cities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#newsletter">Newsletter</a>
+            <a class="nav-link" href="index.html#newsletter">Newsletter</a>
           </li>
         </ul>
       </div>
