changed text size and direction pannels on cities map pages

--- a/breweries-near-you.html
+++ b/breweries-near-you.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+   <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
         class="navbar-toggler ml-auto"
         type="button"
@@ -54,21 +54,27 @@
 
         <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
+            <a class="nav-link" href="index.html"
+              >Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="index.html#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nearyou">Breweries near you</a>
+            <a class="nav-link" href="index.html#nearyou">Breweries near you</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#cities">Cities</a>
+            <a class="nav-link" href="index.html#cities">Cities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#newsletter">Newsletter</a>
+            <a class="nav-link" href="index.html#newsletter">Newsletter</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#about">About</a>
+            <li class="nav-item">
+            <a class="nav-link" href="index.html#BarHopUk">Bar Hop UK</a>
+          </li>
           </li>
         </ul>
       </div>
