--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
 
         <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home</a
-            >
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
@@ -342,7 +340,7 @@
     </div>
 
     <!------------------------Join up/What we offer section ----------------------------->
-<div id="BarHopUk"></div>
+    <div id="BarHopUk"></div>
     <h2 class="barhop-heading jumbotron jumbotron-barhop">
       Bar Hop UK
     </h2>
@@ -351,7 +349,6 @@
       <div class="row">
         <div class="col-md-6 offset-md-3">
           <h1 class="premium-header"></h1>
-
 
           <p>
             Being part of our app will bring you as close to the world of craft
@@ -375,19 +372,19 @@
         <div class="card-body card-offering">
           <h5 class="card-title">Tasting Flights</h5>
           <p class="card-text">
-            Taste a range of beers at each brewery
+            Taste a range of beers at each brewery.
           </p>
         </div>
       </div>
-      <div class="card p-3 card-offering">
+      <div class="card card-offering">
         <img
           src="assets/images/Edinburg2.jpeg"
           class="card-img-top"
           alt="Edinburgh city"
         />
-        <blockquote class="blockquote mb-0 card-body">
+        <h5 class="card-title">
           More cities to come!
-        </blockquote>
+        </h5>
         <p class="card-text">
           Bar Hop UK is poised to add more uk breweries for you to explore.
         </p>
@@ -400,7 +397,7 @@
         />
         <div class="card-body">
           <h5 class="card-title">Brewery Tours</h5>
-          <p class="card-text">Tour breweries and meet brewers</p>
+          <p class="card-text">Tour breweries and meet brewers.</p>
         </div>
       </div>
 
@@ -431,6 +428,7 @@
           <p class="card-text"></p>
         </div>
       </div>
+
       <div class="card card-offering">
         <img
           src="assets/images/meet-new-people.jpg"
@@ -438,11 +436,10 @@
           alt="People enjoying beer"
         />
       </div>
-      <div class="card p-3 text-right">
+      <div class="card p-3">
         <p class="card-text">
           Meet like minded people and explore a world of craft beer.
         </p>
-        <footer class="blockquote-footer"></footer>
       </div>
       <div class="card card-offering">
         <div class="card-body">
@@ -460,8 +457,31 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+      <div class="col col-md-6 offset-md-3">
+         <div class="card text-center card-offering">
+        <div class="card-body meet-new-card">
+          <h5 class="card-title">Become a scicerone</h5>
+          <p class="card-text">
+            Would you like to become a cerrtified beer server?
+          </p>
+          <a
+            href="https://www.cicerone.org/us-en/certifications/certified-beer-server"
+            target="_blank"
+            ><img
+              src="assets/images/cicerone.jpeg"
+              class="card-img-top"
+              alt="cicerone beer server logo"
+          /></a>
+          <p class="card-text"></p>
+        </div>
+      </div>
+      </div>
+      </div>
+    </div>
+
     <!------------------------Footer----------------------------->
-    <
 
     <div class="footer">
       <div class="container">
