--- a/london.html
+++ b/london.html
@@ -87,6 +87,7 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html#newsletter">Newsletter</a>
           </li>
+          
         </ul>
       </div>
     </nav>
@@ -105,11 +106,10 @@
       </div>
     </div>
 
-    <div class="container-fluid manchester-container">
+    <div class="container-fluid ">
       <div class="row">
         <div class="col">
           <div id="map"></div>
-
           <div id="right-panel">
             <div>
               <b>Starting-Brewery:</b>
