--- a/manchester.html
+++ b/manchester.html
@@ -42,8 +42,7 @@
     <title>Bar Hop UK</title>
   </head>
   <body>
-   
-  <!------------------------Navbar----------------------------->
+    <!------------------------Navbar----------------------------->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
@@ -87,6 +86,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html#newsletter">Newsletter</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#BarHopUk">Bar Hop UK</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -109,7 +111,6 @@
       <div class="row">
         <div class="col">
           <div id="map"></div>
-
           <div id="right-panel">
             <div>
               <b>Starting-Brewery:</b>
