--- a/liverpool.html
+++ b/liverpool.html
@@ -90,6 +90,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html#about">About</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#BarHopUk">Bar Hop UK</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -108,7 +111,7 @@
       </div>
     </div>
 
-    <div class="container-fluid manchester-container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col">
           <div id="map"></div>
