updated read me file with user map test

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!------------------------About copy----------------------------->
 
-    <div class="about-container">
+    <div class="container-fluid about-container">
       <div class="row">
         <div class="col-md-6 offset-md-3 col-xs-4">
           <p>
