--- a/manchester.html
+++ b/manchester.html
@@ -107,7 +107,7 @@
       </div>
     </div>
 
-    <div class="container-fluid manchester-container">
+    <div class="container-fluid ">
       <div class="row">
         <div class="col">
           <div id="map"></div>
