--- a/manchester.html
+++ b/manchester.html
@@ -54,7 +54,7 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
+       <i class="fas fa-beer"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <a href="index.html">
@@ -98,9 +98,8 @@
         <div class="col">
           <h2 class="city-map-heading">Manchester</h2>
           <p>
-            Using the brewery locater panel choose from the list of breweries
-            which you would like to visit. Choose brewery from which you would
-            like to start from a brewery yoy would like to finsh your journey on
+   Using the brewery locater panel choose from the list of breweries which you would like to visit. Choose brewery from which you would
+            like to start from a brewery you would like to finish your journey on
             and as many as you would like in between.
           </p>
         </div>
