--- a/london.html
+++ b/london.html
@@ -55,7 +55,7 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
+        <i class="fas fa-beer"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <a href="index.html">
@@ -97,9 +97,8 @@
         <div class="col">
           <h2 class="city-map-heading">London</h2>
           <p class="brewery-locator" >  
-            Using the brewery locater panel choose from the list of breweries
-            which you would like to visit. Choose brewery from which you would
-            like to start from a brewery yoy would like to finsh your journey on
+            Using the brewery locater panel choose from the list of breweries which you would like to visit. Choose brewery from which you would
+            like to start from a brewery you would like to finish your journey on
             and as many as you would like in between.
           </p>
         </div>
