--- a/breweries-near-you.html
+++ b/breweries-near-you.html
@@ -1,115 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/53108b937c.js"
-      crossorigin="anonymous"
-    ></script>
-
-
-    <script src="assets/js/breweries-near-you.js"></script>
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Bar Hop UK</title>
-  </head>
-
-  <body>
-   <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <button
-        class="navbar-toggler ml-auto"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <a href="index.html">
-          <div class="logo">
-            <div id="BarHop-logo">
-              <img
-                src="assets/images/Bar Hop UK logo.png"
-                class="logo bar-hop-logo"
-                alt="Bar-Hop-UK"
-              />
-            </div></div
-        ></a>
-
-        <ul class="navbar-nav ml-auto nav-list">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home</a
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+         type="text/css"
+         />
+      <link
+         rel="stylesheet"
+         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+         crossorigin="anonymous"
+         />
+      <script
+         src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://kit.fontawesome.com/53108b937c.js"
+         crossorigin="anonymous"
+         ></script>
+      <script src="assets/js/breweries-near-you.js"></script>
+      <link rel="stylesheet" href="assets/css/style.css" />
+      <title>Bar Hop UK</title>
+   </head>
+   <body>
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+         <button
+            class="navbar-toggler ml-auto"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
             >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#nearyou">Breweries near you</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#cities">Cities</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#newsletter">Newsletter</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#about">About</a>
-             </li>
-            <li class="nav-item">
-            <a class="nav-link" href="index.html#BarHopUk">Bar Hop UK</a>
-          </li>
-         
-        </ul>
-      </div>
-    </nav>
-    
-    <div id="panel"></div>
-    <div id="breweries-map"></div>
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.0.js"
-      integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
-      async
-      defer
-    ></script>
-  </body>
+         <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <a href="index.html">
+               <div class="logo">
+                  <div id="BarHop-logo">
+                     <img
+                        src="assets/images/Bar Hop UK logo.png"
+                        class="logo bar-hop-logo"
+                        alt="Bar-Hop-UK"
+                        />
+                  </div>
+               </div
+                  >
+            </a>
+            <ul class="navbar-nav ml-auto nav-list">
+               <li class="nav-item active">
+                  <a class="nav-link" href="index.html"
+                     >Home</a
+                     >
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="index.html#about">About</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="index.html#nearyou">Breweries near you</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="index.html#cities">Cities</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="index.html#newsletter">Newsletter</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="index.html#about">About</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="index.html#BarHopUk">Bar Hop UK</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+      <div id="panel"></div>
+      <div id="breweries-map"></div>
+      <script
+         src="https://code.jquery.com/jquery-3.5.0.js"
+         integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+         crossorigin="anonymous"
+         ></script>
+      <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+      <script
+         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
+         async
+         defer
+         ></script>
+   </body>
 </html>
